<resources>
    <string name="app_name">New Year Greetings</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="name">Name</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="automessage">Grateful to be blessed with such a wonderful family.Wish you a very Merry Christmas!</string>
    <string name="yn">Y/N</string>
    <string name="create_christmas_card">Create New Year Card</string>
    <string name="wish">Wishes</string>
    <string name="merry_christmas">Merry Christmas!</string>
    <string name="christmasbackground">christmasbackground</string>
    <string name="christmas">christmas</string>
</resources>